# speech-to-text-whisper

./: .gitignore  README.md  api.py  convert.py  divide.py  pyproject.toml  transcribe_and_save.py  transcription.txt  whipser.py
m4a_data/sample/: sample.m4a
transcription/sample/: sample.txt
transcriptions/230621_NA2/: 230621_NA2.txt
transcriptions/230622_CE/: 230622_CE.txt
transcriptions/230627_office-hours/: 230627_office-hours-transcription.txt  230627_office-hours_0.txt  230627_office-hours_1.txt  230627_office-hours_2.txt  230627_office-hours_3.txt  230627_office-hours_4.txt  230627_office-hours_5.txt  230627_office-hours_6.txt  230627_office-hours_7.txt  230627_office-hours_8.txt
transcriptions/230705_NA2/: 230705数値解析2-1.txt  230705数値解析2-2.txt  230705数値解析2-3.txt  230705数値解析2-4.txt  230705数値解析2-5.txt  230705数値解析2-6.txt
transcriptions/230706_CE/: 230706_CE1.txt  230706_CE1_1.txt  230706_CE2.txt
transcriptions/230706_CS/: 230706_CS.txt  230706_CS2.txt
