[project]
name = "speech-to-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch==2.0.1+cu117; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "openai-whisper"
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
torch = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
]
